--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-
+    <section class="game-window">
+        <div class="output">
+            <p class="output-paragraph"><span id="human-choice">Your choice</span> // <span
+                    id="computer-choice">Computer's choice</span></p>
+        </div>
+        <div class="game-buttons">
+            <button id="rock-button">Rock</button>
+            <button id="paper-button">Paper</button>
+            <button id="scissors-button">Scissors</button>
+        </div>
+    </section>
 </body>
 
 </html>
