--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
             <p class="output-paragraph"><span id="human-choice">Your choice</span> // <span
                     id="computer-choice">Computer's choice</span></p>
         </div>
+        <div class="round">
+            <p>Round <span id="round-counter">0</span>/5</p>
+        </div>
+        <div class="score">
+            <p>You: <span id="human-score">0</span></p>
+            <p>Computer: <span id="computer-score">0</span></p>
+        </div>
         <div class="game-buttons">
-            <button id="rock-button">Rock</button>
-            <button id="paper-button">Paper</button>
-            <button id="scissors-button">Scissors</button>
+            <button id="rock-button" onclick="getHumanChoice('rock')">Rock</button>
+            <button id="paper-button" onclick="getHumanChoice('paper')">Paper</button>
+            <button id="scissors-button" onclick="getHumanChoice('scissors')">Scissors</button>
+            <button id="restart">Restart</button>
         </div>
     </section>
 </body>
