Modify all files
Modified README to add pseudo code to handle restarts.
Modified index.html slightly to find the restart button.
Modified style.css just to hide restart button from the start.
Modified script.js to add functionality to the restart button. Users can now restart the game.

This is the extent of the changes for now. I may come back and make the game look nice or fix script.js because it is probably not great.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="rock-button" onclick="getHumanChoice('rock')">Rock</button>
             <button id="paper-button" onclick="getHumanChoice('paper')">Paper</button>
             <button id="scissors-button" onclick="getHumanChoice('scissors')">Scissors</button>
-            <button id="restart">Restart</button>
+            <button id="restart-button" onclick="handleRestart()">Restart</button>
         </div>
     </section>
 </body>
