--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <body>
     <section class="game-window">
         <div class="output">
-            <p class="output-paragraph"><span id="human-choice">Your choice</span> // <span
-                    id="computer-choice">Computer's choice</span></p>
+            <p class="output-paragraph"><span id="human-choice">Your choice goes here</span> // <span
+                    id="computer-choice">Computer's choice goes here</span></p>
         </div>
         <div class="round">
-            <p>Round <span id="round-counter">0</span>/5</p>
+            <p>Round <span id="round-counter">1</span>/5</p>
+            <p>Result of Round: <span id="round-result"></span></p>
         </div>
         <div class="score">
             <p>You: <span id="human-score">0</span></p>
             <p>Computer: <span id="computer-score">0</span></p>
+            <p>Result of Game: <span id="game-result"></span></p>
         </div>
         <div class="game-buttons">
             <button id="rock-button" onclick="getHumanChoice('rock')">Rock</button>
